    ML_OPTIONS64 (depending on the effective ML_PLATFORM).

Examples:

    isabelle build -o ML_system_64 -b HOL
    isabelle jedit -o ML_system_64

* System option "ML_platform" specifies the underlying Poly/ML platform
identifier explicitly: it takes precedence over all other options and
settings to determine the ML_PLATFORM (see above).

* System option "build_progress_detailed" tells "isabelle build" to
output detailed information while processing theories, notably the
percentage and cumulated timing. This requires an output channel
(terminal) that supports ANSI control sequences, notably for cursor
movement and deletion of previous output. The default is to output only
the finished state (100%) with its timing information, without using any
ANSI control sequences.

* System option "record_theories" tells "isabelle build" to record
intermediate theory commands and results, at the cost of approx. 5 times
larger ML heap images. This allows to retrieve fine-grained semantic
information later on, using Thy_Info.get_theory_segments or
Thy_Info.get_theory_elements in Isabelle/ML.

* System option "command_timing_threshold" has been renamed to
"build_timing_threshold": it refers to batch-builds. Likewise,
"jedit_timing_threshold" and "vscode_timing_threshold" have been unified
as "editor_timing_threshold": it refers to PIDE editor interaction.

* The Z Garbage Collector (ZGC) of Java 21 is now used by default (see
also https://wiki.openjdk.org/display/zgc). This should work uniformly
on all platforms, but requires a reasonably new version of Windows
(Windows 10 or Windows Server 2019).

* SSH connections allow both bash and zsh as remote shell. This is
particularly important for macOS, where zsh is the default user shell.

* Isabelle/Scala supports SVG via the "jsvg" library
(com.github.weisj.jsvg.SVGDocument), as well as the "flatlaf-extras"
library (com.formdev.flatlaf.extras.FlatSVGIcon).

* Update to official Poly/ML 5.9.2, with minor changes to word and